5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1800_2567.log
== TEST (2019-06-10 16:37:52) 
-- CODE:
from numpy import*
n=int(input("numero de entrada: "))
vet=[*]*n
for i in vet:
	print(vet)
	vet[i]=vet[i]-*

		
-- ERROR:
File "XXXX", line 3
    vet=[*]*n
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:00:29) 
-- CODE:
from numpy import*
n=int(input("numero de entrada: "))
j=n
for j in range(n):
	print(j*"*")
	#n[i]=vet[i]-*

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:00:45) 
-- CODE:
from numpy import*
n=int(input("numero de entrada: "))
j=n
for j in range(n):
	print(j*"*")
	#n[i]=vet[i]-*

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:01:53) 
-- CODE:
from numpy import*
n=int(input("numero de entrada: "))
j=n+1
for j in range(n):
	print(j*"*")
	#n[i]=vet[i]-*

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 17:05:37) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))
j=k
while(j>=1):
	print(j*"*")
	j=j-1
j=1
while(j<=n):
	print(j*"*")
	j=j+1	
-- EXECUTION TIME:
1.04652
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2567/main.py", line 8, in <module>
    while(j<=n):
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 17:06:05) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))
j=k
while(j>=1):
	print(j*"*")
	j=j-1
j=1
while(j<=k):
	print(j*"*")
	j=j+1	
-- EXECUTION TIME:
1.11192
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:19:07) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))
j=k
for j in range(size(k))
	print(j*"*")
	
#j=1
#while(j<=k):
	#print(j*"*")
	#j=j+1	
-- ERROR:
File "XXXX", line 4
    for j in range(size(k))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:19:16) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))

for j in range(size(k)):
	print(j*"*")
	
#j=1
#while(j<=k):
	#print(j*"*")
	#j=j+1	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:19:46) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))

for j in range(k):
	print(j*"*")
	
#j=1
#while(j<=k):
	#print(j*"*")
	#j=j+1	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:20:53) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))

for j in range(k+1):
	print(j*"*")
	
#j=1
#while(j<=k):
	#print(j*"*")
	#j=j+1	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:20:53) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))

for j in range(k+1):
	print(j*"*")
	
#j=1
#while(j<=k):
	#print(j*"*")
	#j=j+1	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:20:54) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))

for j in range(k+1):
	print(j*"*")
	
#j=1
#while(j<=k):
	#print(j*"*")
	#j=j+1	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:24:43) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))






for j in range(k+1):
	print(j*"*")
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:26:42) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))


for i in range(k):
	print(k*"*")
	k=k-1


for j in range(k+1):
	print(j*"*")
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:27:55) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))
k=ko

for i in range(ko):
	print(ko*"*")
	ko=ko-1


for j in range(k+1):
	print(j*"*")
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:28:27) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))


for i in range(ko):
	print(ko*"*")
	ko=ko-1


for j in range(k+1):
	print(j*"*")
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:28:37) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))


for i in range(k):
	print(k*"*")
	k=k-1


for j in range(k+1):
	print(j*"*")
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:29:16) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))
k=x

for i in range(k):
	print(k*"*")
	k=k-1


for j in range(x+1):
	print(x*"*")
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:31:28) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))
k=x

for i in range(k):
	print(k*"*")
	k=k-1


for j in range(x+1):
	print(x*"*")
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:33:21) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))
x=k

for i in range(k):
	print(k*"*")
	k=k-1


for j in range(x+1):
	print(x*"*")
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:33:55) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))
x=k

for i in range(k):
	print(k*"*")
	k=k-1


for j in range(x+1):
	print(x*"*")
	x=x-1

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:34:30) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))
x=k

for i in range(k):
	print(k*"*")
	k=k-1


for j in range(x+1):
	print(k*"*")
	k=k+1

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:34:54) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))
x=k

for i in range(k):
	print(k*"*")
	k=k-1
for j in range(x+1):
	print(k*"*")
	k=k+1

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:36:09) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))
x=k

for i in range(k-1):
	print(k*"*")
	k=k-1
for j in range(x+1):
	print(k*"*")
	k=k+1

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:36:26) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))
x=k

for i in range(k-1):
	print(k*"*")
	k=k-1
for j in range(x):
	print(k*"*")
	k=k+1

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:36:50) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))
x=k

for i in range(k):
	print(k*"*")
	k=k-1
for j in range(x):
	print(k*"*")
	k=k+1

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:37:30) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))
x=k

for i in range(k):
	print(k*"*")
	k=k-1
for j in range(x+1):
	print(k*"*")
	k=k+1

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:40:25) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))
x=k

for i in range(x):
	print(k*"*")
	k=k-1
for j in range(x+1):
	print(k*"*")
	k=k+1

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:40:48) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))
x=k+1

for i in range(x):
	print(k*"*")
	k=k-1
for j in range(x+1):
	print(k*"*")
	k=k+1

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:40:59) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))
x=k-1

for i in range(x):
	print(k*"*")
	k=k-1
for j in range(x+1):
	print(k*"*")
	k=k+1

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:42:20) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))
x=k-1

for i in range(x):
	print(k*"*")
	k=k-1

for j in range(x+1):
	print(x*"*")
	k=k+1

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:42:30) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))
x=k-1

for i in range(x):
	print(k*"*")
	k=k-1

for j in range(x+1):
	print(k*"*")
	k=k+1

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:42:55) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))
x=k-1

for i in range(x):
	print(k*"*")
	k=k-1

for j in range(x+1):
	k=k+1
	print(k*"*")
	k=k+1

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:43:37) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))
x=k-1

for i in range(x):
	print(k*"*")
	k=k-1

for j in range(x):
	k=k+1
	print(k*"*")
	k=k+1

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:44:15) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))
x=k-1

for i in range(x):
	print(k*"*")
	k=k-1
x=x+1
for j in range(x):
	
	print(k*"*")
	k=k+1

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:44:31) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))
x=k

for i in range(x):
	print(k*"*")
	k=k-1
k=k+1
for j in range(x):
	
	print(k*"*")
	k=k+1

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:44:41) 
-- CODE:
from numpy import*
k=int(input("numero de entrada: "))
x=k

for i in range(x):
	print(k*"*")
	k=k-1
k=k+1
for j in range(x):
	
	print(k*"*")
	k=k+1

	
-- EXECUTION TIME:
0.881929
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
